Added interests selection page plus minor edits

--- a/web/index.html
+++ b/web/index.html
@@ -67,10 +67,10 @@
 
         <div class="split right">
             <nav class="menu">
-                <div class="box one"><h1>MyMeet</h1></div>
-                <div class="box two"><h1>WeMeet</h1></div>
-                <div class="box three"><h1>OurMeet</h1></div>
-                <div class="box four"><h1>MyMeet Settings</h1></div>
+                <div class="box one"><h1>MyInterests</h1></div>
+                <div class="box two"><h1>MyGroups</h1></div>
+                <div class="box three"><h1>MyEvents</h1></div>
+                <div class="box four"><h1>MySettings</h1></div>
         </div>
     </div>
     </body>
