--- a/web/signup.html
+++ b/web/signup.html
@@ -21,7 +21,7 @@
                         <input type="text" name="lastname" placeholder="Last name">
                     </div>
                     <input type="text" name="username" placeholder="Username">
-                    <input type="text" name="email" placeholder="Email">
+                    <input type="email" name="email" placeholder="Email">
                     <input type="password" name="password" placeholder="Password">
                     <input type="submit" value="Create account" class="bt1">
                 </form>
