--- a/web/interests.html
+++ b/web/interests.html
@@ -24,56 +24,87 @@
             <h1>Select each of your interests</h1>
             <form name="form1">
                 <ul>
-                    <li>
-                        <input type="checkbox" name="aeronautics"><span>Aeronautics</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="anime"><span>Anime</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="art"><span>Art</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="books"><span>Books</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="cars"><span>Cars</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="history"><span>History</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="medical"><span>Medical</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="movies_tv"><span>Movies & TV</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="music"><span>Music</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="nature"><span>Nature</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="photography"><span>Photography</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="religion"><span>Religion</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="school"><span>School</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="sports"><span>Sports</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="technology"><span>Technology</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="videogames"><span>Video Games</span>
-                    </li>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="aeronautics"><span>Aeronautics</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="anime"><span>Anime</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="art"><span>Art</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="books"><span>Books</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="cars"><span>Cars</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="history"><span>History</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="medical"><span>Medical</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="movies_tv"><span>Movies & TV</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="music"><span>Music</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="nature"><span>Nature</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="photography"><span>Photography</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="religion"><span>Religion</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="school"><span>School</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="sports"><span>Sports</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="technology"><span>Technology</span>
+                        </li>
+                    </label>
+                    <label class="container">
+                        <li>
+                            <input type="checkbox" name="videogames"><span>Video Games</span>
+                        </li>
+                    </label>
                 </ul>
-
                 <input type="submit" value="Save" class="bt1">
             </form>
         </div>
