--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
 
         <div class="split right">
             <nav class="menu">
-                <div class="box one"><h1>MyInterests</h1></div>
+                <div class="box one"><h1><a href="interests.html">MyInterests</a></h1></div>
                 <div class="box two"><h1>MyGroups</h1></div>
                 <div class="box three"><h1>MyEvents</h1></div>
                 <div class="box four"><h1>MySettings</h1></div>
