--- a/web/login.html
+++ b/web/login.html
@@ -13,7 +13,7 @@
     <body>
         <div class="login-page">
             <div class="container">
-                <form name="form1" class="box">
+                <form name="form1" class="box" action="\login" method="doPost">
                     <h1>MyMeet</h1>
                     <h3>Sign in to your account.</h3>
                     <input type="text" name="username" placeholder="Username">
