Event Creation page

--- a/web/create_event.html
+++ b/web/create_event.html
@@ -11,14 +11,38 @@
 </head>
 
 <body>
-    <form name="form1">
-        <input type="text" name="event_name" placeholder="event Name">
-        <input type="text" name="address" placeholder="address">
-        <input type="text" name="start_day" placeholder="start day">
-        <input type="text" name="start_time" placeholder="start time">
-        <input type="text" name="end_day" placeholder="end day">
-        <input type="text" name="end_time" placeholder="end time">        
-        <input type="submit" value="save">
-    </form>
+    <div class="create-event-page">
+        <h1>Create an Event</h1>
+        <form name="form1">
+            <ul>
+                <li>
+                    <input type="text" name="event_name" placeholder="event Name">
+                </li>
+                <li>
+                    <input type="text" name="address" placeholder="Address">
+                </li>
+                <li>
+                    <input type="text" name="start_day" placeholder="Start Day">
+                </li>
+                <li>
+                    <input type="text" name="start_time" placeholder="Start Time">
+                </li>
+                <li>
+                    <input type="text" name="end_day" placeholder="End Day">
+                </li>
+                <li>
+                    <input type="text" name="end_time" placeholder="End Time">     
+                </li>
+                <li>
+                    <input type="submit" value="Create">
+                </li>
+            </ul>
+        </form>
+
+        <a href=""><h3>Cancel</h3></a>
+        <div class="end"></div>
+
+    </div>
+    
 </body>
 </html>
