--- a/web/forgotpassword.html
+++ b/web/forgotpassword.html
@@ -15,10 +15,10 @@
             <div class="container">
                 <form name="form1" class="box">
                     <h1>MyMeet</h1>
-                    <h3>Enter your account's <br> email to reset password.</h3>
-                    <input type="text" name="email" placeholder="Email">
+                    <h3>Enter your account's <br> username to reset password.</h3>
+                    <input type="text" name="username" placeholder="username">
                     <input type="submit" value="Submit" class="bt1">
-                    <br><a class="cancel" href="">Cancel</a>
+                    <br><a class="cancel" href="login.html">Cancel</a>
                 </form>
             </div>
         </div>    
