--- a/web/login.html
+++ b/web/login.html
@@ -18,10 +18,10 @@
                     <h3>Sign in to your account.</h3>
                     <input type="text" name="username" placeholder="Username">
                     <input type="password" name="password" placeholder="Password">
-                    <a class="forpass" href="https://www.google.com/">Forget password?</a>
+                    <a class="forpass" href="forgotpassword.html">Forget password?</a>
                     <input type="submit" value="Sign in" class="bt1">
                 </form>
-                <a class="signup" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't have an account? Sign up.</a>
+                <a class="signup" href="signup.html">Don't have an account? Sign up.</a>
             </div>
         </div>    
     </body>
