--- a/web/signup.html
+++ b/web/signup.html
@@ -13,7 +13,7 @@
     <body>
         <div class="signup-page">
             <div class="container">
-                <form name="form1" class="box" action="/registration" method="post">
+                <form name="form1" class="box" action="/registration" method="doPost">
                     <h1>MyMeet</h1>
                     <h3>Create your account.</h3>
                     <div class="name">
