--- a/web/group.html
+++ b/web/group.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>group</title>
-
+    <title>View Group</title>
+    <link 
+    type= "text/css" rel="stylesheet"
+    href="./resources/css/group.css">
 </head>
 
 <body>
-    <div>
-        <div class="logo"><span>MyMeet</span></div>
+    <div class="logo"><span>MyMeet</span></div>
+    <div class="group-page">
         <div class="vline"></div>
-        <div class="split left">
+        <div class="left">
 
             <!-- Add an area that contains banner, img, and names -->
 
-            <div id="group_names">
+            <div class="group-names">
                 <h1>GROUP NAME HERE</h1>
                 <h2>Admin Name Here</h2>
             </div>
 
-            <div class="home_info">
+            <div class="home-info">
                 <h1>Interests</h1>
                 <ul>
                     <li>Web Development</li>
@@ -40,7 +42,7 @@
                 </ul>
                 <br>
 
-                <h1>EVENTS</h1>
+                <h1>Events</h1>
                 <ul>
                     <li>List of events Here</li>
                 </ul>
@@ -52,12 +54,13 @@
             </div>
         </div>
 
-        <div class="split right">
-            <nav class="menu">
-                <div class="box one"><h1>Delete Group</h1></div>
-                <div class="box two"><h1>Create event</h1></div>
-                <div class="box three"><h1>join group</h1></div>
-                <div class="box four"><h1>leave Group</h1></div>
+        <div class="right">
+            <div class="box">
+                <h1>Delete Group</h1>
+                <h1>Create Event</h1>
+                <h1>Join Group</h1>
+                <h1>Leave Group</h1>
+            </div>
         </div>
     </div>
 
