--- a/web/event.html
+++ b/web/event.html
@@ -15,6 +15,10 @@
         <li>event attendees here</li>
     </ul>
     <h3>Images</h3>
+    <form method="post" action="multiPartServlet" enctype="multipart/form-data">
+        Choose a file: <input type="file" name="multiPartServlet" />
+        <input type="submit" value="Upload" />
+    </form>
     <ul>
         <li>images here</li>
     </ul>
