--- a/web/event.html
+++ b/web/event.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>event</title>
+    <title>View Event</title>
+    <link
+    type= "text/css" rel="stylesheet"
+    href="./resources/css/event.css">
 </head>
 
 <body>
-    <h1>Event Name here</h1>
-    <h2>Event creator here</h2>
-    <h3>Event Attendees</h3>
-    <ul>
-        <li>event attendees here</li>
-    </ul>
-    <h3>Images</h3>
-    <ul>
-        <li>images here</li>
-    </ul>
-    <h3>Event information</h3>
-    <ul>
-        <li>Location</li>
-        <li>start date/time</li>
-        <li>end date/time</li>
-    </ul>
+    <div class="event-page">
+        <h1>Event Name here</h1>
+        <h2>Event creator here</h2>
+
+        <div class="event-info">
+            <h2>Event information</h2>
+            <ul>
+                <li>Location</li>
+                <li>start date/time</li>
+                <li>end date/time</li>
+            </ul>
+            <h2>Event Attendees</h2>
+            <ul>
+                <li>event attendees here</li>
+            </ul>
+            <h2>Images</h2>
+            <ul>
+                <li>images here</li>
+            </ul>
+        </div>
+        
+    </div>
 
 </body>
 
